# Sudoku

./: .gitignore  CMakeLists.txt  Sudoku.h.in  main.cpp  todo.md  vcpkg.json
Application/: Algorithm.cpp  Algorithm.h  ApiHandler.cpp  ApiHandler.h  Application.cpp  Application.h  Gui.cpp  Gui.h  Settings.cpp  Settings.h
